question answer added

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -9,27 +9,14 @@
     "## Project: Write an Algorithm for a Dog Identification App \n",
     "\n",
     "---\n",
-    "\n",
-    "In this notebook, some template code has already been provided for you, and you will need to implement additional functionality to successfully complete this project. You will not need to modify the included code beyond what is requested. Sections that begin with **'(IMPLEMENTATION)'** in the header indicate that the following block of code will require additional functionality which you must provide. Instructions will be provided for each section, and the specifics of the implementation are marked in the code block with a 'TODO' statement. Please be sure to read the instructions carefully! \n",
-    "\n",
-    "> **Note**: Once you have completed all of the code implementations, you need to finalize your work by exporting the Jupyter Notebook as an HTML document. Before exporting the notebook to html, all of the code cells need to have been run so that reviewers can see the final implementation and output. You can then export the notebook by using the menu above and navigating to **File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission.\n",
-    "\n",
-    "In addition to implementing code, there will be questions that you must answer which relate to the project and your implementation. Each section where you will answer a question is preceded by a **'Question X'** header. Carefully read each question and provide thorough answers in the following text boxes that begin with **'Answer:'**. Your project submission will be evaluated based on your answers to each of the questions and the implementation you provide.\n",
-    "\n",
-    ">**Note:** Code and Markdown cells can be executed using the **Shift + Enter** keyboard shortcut.  Markdown cells can be edited by double-clicking the cell to enter edit mode.\n",
-    "\n",
-    "The rubric contains _optional_ \"Stand Out Suggestions\" for enhancing the project beyond the minimum requirements. If you decide to pursue the \"Stand Out Suggestions\", you should include the code in this Jupyter notebook.\n",
-    "\n",
-    "\n",
-    "\n",
     "---\n",
     "### Why We're Here \n",
     "\n",
-    "In this notebook, you will make the first steps towards developing an algorithm that could be used as part of a mobile or web app.  At the end of this project, your code will accept any user-supplied image as input.  If a dog is detected in the image, it will provide an estimate of the dog's breed.  If a human is detected, it will provide an estimate of the dog breed that is most resembling.  The image below displays potential sample output of your finished project (... but we expect that each student's algorithm will behave differently!). \n",
+    "In this notebook, we'll make the first steps towards developing an algorithm that could be used as part of a mobile or web app.  At the end of this project, our code will accept any user-supplied image as input.  If a dog is detected in the image, it will provide an estimate of the dog's breed.  If a human is detected, it will provide an estimate of the dog breed that is most resembling.  The image below displays potential sample output of our finished project (\n",
     "\n",
     "![Sample Dog Output](images/sample_dog_output.png)\n",
     "\n",
-    "In this real-world setting, you will need to piece together a series of models to perform different tasks; for instance, the algorithm that detects humans in an image will be different from the CNN that infers dog breed.  There are many points of possible failure, and no perfect algorithm exists.  Your imperfect solution will nonetheless create a fun user experience!\n",
+    "In this real-world setting, we'll need to piece together a series of models to perform different tasks; for instance, the algorithm that detects humans in an image will be different from the CNN that infers dog breed.  There are many points of possible failure, and no perfect algorithm exists.  Your imperfect solution will nonetheless create a fun user experience!\n",
     "\n",
     "### The Road Ahead\n",
     "\n",
@@ -77,33 +64,17 @@
     "from glob import glob\n",
     "\n",
     "# load filenames for human and dog images\n",
-    "human_files = np.array(glob(\"/data/lfw/*/*\"))\n",
-    "dog_files = np.array(glob(\"/data/dog_images/*/*/*\"))\n",
+    "human_files = np.array(glob(\"lfw/*/*\"))\n",
+    "dog_files = np.array(glob(\"dogImages/*/*/*\"))\n",
     "\n",
     "# load list of dog names\n",
-    "dog_names = [item[20:-1] for item in sorted(glob(\"/data/dog_images/train/*/\"))]\n",
+    "dog_names = [item[20:-1] for item in sorted(glob(\"dog_images/train/*/\"))]\n",
     "dog_breeds = len(dog_names)\n",
     "\n",
     "# print number of images in each dataset\n",
     "print('There are %d total dog categories.' % len(dog_names))\n",
     "print('There are %d total human images.' % len(human_files))\n",
     "print('There are %d total dog images.' % len(dog_files))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import torchvision.models as models\n",
-    "#model_conv = models.resnet18(pretrained=True)\n",
-    "#for param in model_conv.parameters():\n",
-    "#    param.requires_grad = False\n",
-    "#print(model_conv)\n",
-    "#print(model_conv.fc.in_features)"
    ]
   },
   {
@@ -222,7 +193,9 @@
    "metadata": {},
    "source": [
     "__Answer:__ \n",
-    "(You can print out your results and/or write your percentages in this cell)"
+    "\n",
+    "`98.00% percentage of the first 100 images in human_files have a detected human face.\n",
+    "17.00% percentage of the first 100 images in dog_files have a detected human face.`"
    ]
   },
   {
@@ -552,7 +525,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Answer:__ \n"
+    "__Answer:__ \n",
+    "\n",
+    "`1.00% of the images in human_files_short have a detected dog.\n",
+    "100.00% of the images in dog_files_short have a detected dog.`\n"
    ]
   },
   {
@@ -692,7 +668,7 @@
     "                ])\n",
     "        }\n",
     "\n",
-    "data_dir='/data/dog_images/'\n",
+    "data_dir='dogImages/'\n",
     "\n",
     "data_scratch={x:datasets.ImageFolder(data_dir+x, transform=transform[x])\n",
     "             for x in ['train','test','valid']}\n",
@@ -725,6 +701,21 @@
     "**Question 3:** Describe your chosen procedure for preprocessing the data. \n",
     "- How does your code resize the images (by cropping, stretching, etc)?  What size did you pick for the input tensor, and why?\n",
     "- Did you decide to augment the dataset?  If so, how (through translations, flips, rotations, etc)?  If not, why not?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Answer:__ \n",
+    "\n",
+    "All pre-trained models expect input images normalized in the same way, i.e. mini-batches of 3-channel RGB images of shape (3 x H x W), where H and W are expected to be atleast 224.\n",
+    "\n",
+    "The images have to be loaded in to a range of [0, 1] and then normalized using mean=[0.485, 0.456, 0.406] and std=[0.229, 0.224, 0.225]\n",
+    "\n",
+    "Also images of different sizes are first resized to 256x256 and then center cropped to 224x224.\n",
+    "\n",
+    "Train and validation datasets are augmented by random rotation of 10 degrees and random horizontal flip to increase the dataset size."
    ]
   },
   {
@@ -829,26 +820,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Answer**:"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -906,7 +877,7 @@
     "        \n",
     "        #linear layer (128->200)\n",
     "        self.fc1=nn.Linear(128,200)\n",
-    "        #linear layer (500->133)\n",
+    "        #linear layer (200->133)\n",
     "        self.fc2=nn.Linear(200,dog_breeds)\n",
     "        self.dropout=nn.Dropout(0.5)\n",
     "        \n",
@@ -951,7 +922,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Answer:__ "
+    "__Answer:__ \n",
+    "\n",
+    "In our network architecture, we have used 4 convolutional layers followed by ReLU activation functions and Pooling layers. Pooling layers reduce the width and height in each layer progressively. So we increase the depth in each leyer using more filters. Finally, we have two fully connected layers. We have used dropout in the fully connected layers to avoid overfitting. The output layer has the same number of nodes as the total dog breed classes.\n"
    ]
   },
   {
@@ -1057,7 +1030,7 @@
     "            ## find the loss and update the model parameters accordingly\n",
     "            ## record the average training loss, using something like\n",
     "            ## train_loss = train_loss + ((1 / (batch_idx + 1)) * (loss.data - train_loss))\n",
-    "                    # clear the gradients of all optimized variables\n",
+    "            # clear the gradients of all optimized variables\n",
     "            optimizer.zero_grad()\n",
     "            # forward pass: compute predicted outputs by passing inputs to the model\n",
     "            output = model(data)\n",
@@ -1239,7 +1212,7 @@
     "                ])\n",
     "        }\n",
     "\n",
-    "data_dir='/data/dog_images/'\n",
+    "data_dir='dog_images/'\n",
     "\n",
     "data_transfer={x:datasets.ImageFolder(data_dir+x, transform=transform[x])\n",
     "             for x in ['train','test','valid']}\n",
@@ -1371,7 +1344,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Answer:__ \n"
+    "__Answer:__ \n",
+    "\n",
+    "Here, we freeze the weights for all of the VGG16 network except that of the final fully connected layer. This last fully connected layer is replaced with a new one with random weights and only this layer is trained.\n"
    ]
   },
   {
@@ -1607,7 +1582,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Answer:__ (Three possible points for improvement)"
+    "__Answer:__ \n",
+    "\n",
+    "We get quite impressive result in our algorithm. We could make some improvement using the following steps:\n",
+    "1. Due to time limitation, we have stopped our training early. If we can train for more epochs, then it would certainly improve the accuracy.\n",
+    "2. We could use batch-normalization layers to avoid overfitting and learn faster.\n",
+    "3. We could use some adaptive learning rate scheduler to learn better."
    ]
   },
   {
@@ -1889,7 +1869,7 @@
     }
    ],
    "source": [
-    "run_app('/data/lfw/Adam_Rich/Adam_Rich_0001.jpg')"
+    "run_app('lfw/Adam_Rich/Adam_Rich_0001.jpg')"
    ]
   },
   {
@@ -1919,7 +1899,7 @@
     }
    ],
    "source": [
-    "run_app('/data/lfw/Alicia_Keys/Alicia_Keys_0001.jpg')"
+    "run_app('lfw/Alicia_Keys/Alicia_Keys_0001.jpg')"
    ]
   },
   {
@@ -1949,7 +1929,7 @@
     }
    ],
    "source": [
-    "run_app('/data/lfw/Amber_Frey/Amber_Frey_0001.jpg')"
+    "run_app('lfw/Amber_Frey/Amber_Frey_0001.jpg')"
    ]
   },
   {
