Advantage of transfer learning model added

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -1346,7 +1346,7 @@
    "source": [
     "__Answer:__ \n",
     "\n",
-    "Here, we freeze the weights for all of the VGG16 network except that of the final fully connected layer. This last fully connected layer is replaced with a new one with random weights and only this layer is trained.\n"
+    "We have used pre-trained VGG network to classify different dog's breed. This VGG network is pretrained on imagnet dataset to classify 1000 categories which include different animals and everyday objects including dog's breed. As VGG trained, each of its convolutional layers learns to distinguish the shape of color of different objects. In order to use this pretrained VGG network, If the new dog data set is small and similar to the original imagenet data, we pwerform the following steps: first we slice off the end of the neural network and add a new fully connected layer that matches the number of classes in the new data set, then we randomize the weights of the new fully connected layer; freeze all the weights from the pre-trained network and we train the network to update the weights of the new fully connected layer. Becasue our training dataset is smalland similar to imagenet dataset, this pretrained VGG network outperformed the scratch model in this dog's breed classification task.  \n"
    ]
   },
   {
